# fake-banknote-detection-ml

./: README.md  app.py  classifier.pkl  model.ipynb  pyproject.toml  requirements.txt
